# binary-search-tree-haskell

./: .gitignore  .travis.yml  README.md  bstcli.cabal
src/: BinarySearchTree.hs  CLI.hs  Command.hs  Main.hs
